# K.Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  editor.html
.github/workflows/: cmake-single-platform.yml  latest-build-action.yml
Assets/Shaders/2D/: FragmentShader.glsl  VertexShader.glsl
ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
K.Engine.Common/include/: Scopes.hpp
K.Engine.Common/include/Event/: Event.hpp  Events.hpp
K.Engine.Common/include/Math/: Vector.hpp
K.Engine.Common/src/Math/: Vector2.cpp  Vector3.cpp  Vector4.cpp
K.Engine.Core/include/: Application.hpp  ImGuiLayer.hpp  K.hpp  Layer.hpp  LayerStack.hpp  Window.hpp
K.Engine.Core/src/: Application.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Window.cpp  main.cpp
K.Engine.Graphics/include/: Camera.hpp  Light.hpp  Renderer.hpp
K.Engine.Graphics/src/: Camera.cpp  Renderer.cpp
K.Engine.Input/include/: Input.hpp  Platform.hpp
K.Engine.Input/src/: Input.cpp  Platform.cpp
scripts/: build.bat
